# sp_estimate

./: Cargo.toml  README.md
src/: filters.rs  lib.rs  parameter.rs
src/filters/: gaussian_state.rs  kalman_filter.rs  systems.rs
src/parameter/: running_mean.rs
tests/: circular_motion.rs  kalman_filter.rs  running_mean.rs
