[package]
name = "sp_estimate"
version = "0.1.0"
edition = "2021"
authors = ["Cody Simons <csimo005@ucr.edu>"]
repository = "https://github.com/csimo005/sp_estimate"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dev-dependencies]
plotters = "0.3.7"

[dependencies]
nalgebra = "0.33.2"
piston = "1.0.0"
piston_window = "0.112.0"
plotters-backend = "0.3.7"
plotters-piston = "0.3.0"
rand = "0.8.5"
statrs = "0.18.0"
